# OpenMultimodal

./: .env.example  .gitignore  AGENT.md  README.md  main.py  pyproject.toml
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatView.tsx  DemoSafeButton.tsx  IngestPanel.tsx  LandingPage.tsx  LandingSections.tsx  MarkdownMessage.tsx  ModeTab.tsx  OpenMultimodalHero.tsx  QueryChat.tsx  SourceList.tsx  SourcePanel.tsx  StatusBadge.tsx
frontend/src/lib/: demoSafeActivate.ts
frontend/src/types/: api.ts
src/: __init__.py  config.py  llm.py  main.py
src/agent/: __init__.py  tools.py
src/api/: routes.py  schemas.py
src/index/: __init__.py  vector_store.py
src/ingestion/: __init__.py  embedder.py  parser.py
src/retrieval/: __init__.py  query_engine.py
